--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
   "name": "wikilinker",
   "version": "1.1.0",
+  "license": "",
+  "private": true,
   "dependencies": {
-    "discord.js": "^11.2.1",
+    "discord.js": "^11.3.2",
     "request": "^2.72.0",
     "sqlite": "^2.8.0"
+  },
+  "devDependencies": {
+    "bufferutil": "^3.0.3",
+    "libsodium-wrappers": "^0.7.3",
+    "node-opus": "^0.2.7",
+    "opusscript": "^0.0.6",
+    "sodium": "^2.0.3",
+    "uws": "^9.14.0",
+    "erlpack": "0.1.0"
   }
 }
